# mqe

./: .env.example  .gitignore  NOTES.md  README.md  pyproject.toml  run.sh
agent/: agent.sh  agent_prompt.md  build_prompt.py  critic.py  critic_prompt.md  resilience.py
docs/strategy/: README.md  parameters.md  portfolio.md  signal-flow.md
src/mqe/: analyze.py  compare.py  config.py  html_report.py  io.py  monitor.py  notify.py  optimize.py  report.py  stage1.py  stage2.py
src/mqe/core/: backtest.py  garch.py  indicators.py  metrics.py  pbo.py  portfolio.py  strategy.py
src/mqe/data/: fetch.py
src/mqe/risk/: correlation.py  regime.py  sizing.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py  test_pipeline.py
tests/unit/: test_analyze.py  test_backtest.py  test_compare.py  test_config.py  test_correlation.py  test_critic.py  test_data_fetch.py  test_garch.py  test_html_report.py  test_indicators.py  test_io.py  test_metrics.py  test_monitor.py  test_optimize.py  test_pbo.py  test_portfolio.py  test_regime.py  test_report.py  test_resilience.py  test_sizing.py  test_stage1.py  test_stage1_export.py  test_stage2.py  test_stage2_export.py  test_strategy.py
