[project]
name = "mqe"
version = "0.1.0"
description = "Multi-pair Quant Engine — multi-pair MACD/RSI funnel optimizer"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.22,<2.4",
    "numba>=0.63.1",
    "optuna>=4.7.0",
    "ccxt>=4.5.35",
    "python-dotenv>=1.2.1",
    "pyarrow>=18.0.0",
    "requests>=2.32.0",
    "rich>=13.0",
    "cmaes>=0.12.0",
]

[project.scripts]
mqe = "mqe.optimize:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402", "E741", "E722"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest (>=9.0.2,<10.0.0)",
]
